--- a/css/style.css
+++ b/css/style.css
@@ -435,9 +435,23 @@ body {
 .projects__head {
 	display: flex;
 	justify-content: space-between;
+	margin-bottom: 70px;
 }
 .projects__title {
 }
+
+@media (max-width: 767.98px) {
+	.projects {
+		padding: 50px 0 70px 0;
+	}
+	.projects__title {
+		font-size: 28px;
+	}
+	.projects__head {
+		flex-direction: column;
+	}
+}
+
 .title {
 }
 .projects__button {
@@ -448,7 +462,101 @@ body {
 }
 .btn-arrow {
 }
+
+/* =====Slider===================== */
 .project__slider {
+}
+.slider-project {
+	position: relative;
+}
+
+.slider-project__wrapper {
+}
+.swiper-wrapper {
+}
+.slider-project__slide {
+}
+
+/* Для автоматичного відображення кількості слайдів */
+.slider-project .swiper-slide {
+	width: auto;
+}
+
+/* .slider-project .swiper-slide:not(:last-child) {
+	margin-right: 10px;
+} */
+.slider-project__image {
+	text-align: center;
+	height: 500px;
+	margin-bottom: 10px;
+	background: radial-gradient(#383838 70%, #1b1b1b 100%);
+	overflow: hidden;
+	position: relative;
+}
+
+@media (max-width: 424.98px) {
+	.slider-project__image {
+		height: 300px;
+	}
+}
+img {
+	display: block;
+}
+.slider-project__image img {
+	max-width: 100%;
+	height: 100%;
+	/* Cтилі для ховера */
+	/* transform: scale(1); */
+	transition: all 0.7s ease-out;
+}
+
+.slider-project__image:hover img {
+	transform: scale(1.1) translateY(-5px);
+	opacity: 0.5;
+}
+
+.slider-project__text {
+	font-size: 14px;
+	text-transform: uppercase;
+	line-height: 1.4;
+}
+
+/* ---Стрілки перемикання---- */
+
+.slider-project .swiper-button-next::after,
+.slider-project .swiper-button-prev::after {
+	font-size: 30px;
+	color: transparent;
+	display: flex;
+	background: url("../img/arrow-slide.svg") no-repeat center/30%;
+	background-color: #ffffffe0;
+	height: 50px;
+	padding: 10px 16px;
+	border: 1px solid #2d2727;
+	border-radius: 50%;
+	transition: all 0.3s ease 0s;
+}
+.slider-project .swiper-button-next::after {
+	position: relative;
+	right: 20px;
+}
+.slider-project .swiper-button-prev::after {
+	position: relative;
+	left: 20px;
+	transform: rotate(180deg);
+}
+.swiper-button-next:hover.swiper-button-next::after,
+.swiper-button-prev:hover.swiper-button-prev::after {
+	background-color: #fff;
+}
+
+@media (max-width: 424.98px) {
+	.slider-project .swiper-button-next::after {
+		right: 5px;
+	}
+	.slider-project .swiper-button-prev::after {
+		left: 5px;
+	}
 }
 
 /* ----Services------------------- */
