Update and add new sections

--- a/css/siamo.css
+++ b/css/siamo.css
@@ -58,6 +58,9 @@
 	.menu-open .menu__link-chi {
 		color: #fff;
 	}
+	.menu-open .menu__link-chi.active__page {
+		color: #ff5200;
+	}
 }
 
 /* -------About--------------------- */
