--- a/css/servici.css
+++ b/css/servici.css
@@ -84,6 +84,21 @@
 	background: radial-gradient(#383838 70%, #1b1b1b 100%);
 }
 
+@media (max-width: 767.98px) {
+	.slide__img-wrap {
+		height: 300px;
+	}
+}
+
+@media (max-width: 424.98px) {
+	.slide__img-wrap {
+		height: 230px;
+	}
+	.slide__group .slide__img-wrap {
+		height: 150px;
+	}
+}
+
 .slide__img-wrap img {
 	width: 100%;
 	height: 100%;
