--- a/css/sostenibilita.css
+++ b/css/sostenibilita.css
@@ -73,7 +73,7 @@
 	position: absolute;
 	left: 0;
 	bottom: 0;
-	width: 100%;
+	max-width: 100%;
 	min-height: 50px;
 	padding: 10px;
 	text-align: center;
